--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -24,11 +24,7 @@
                 <td th:text="${e.lastName}"></td>
                 <td th:text="${e.title}"></td>
                 <td th:text="${e.phone}"></td>
-                <td>
-                    <span th:if="${e.reportsTo != null}">
-                        <span th:text="${e.reportsTo.firstName + ' ' + e.reportsTo.lastName}"></span>
-                    </span>
-                </td>
+                <td th:text="${e.reportsToFirstName + ' ' + e.reportsToLastName}"></td>
             </tr>
         </tbody>
     </table>
