--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <a href="/employees" class="btn btn-outline-info">Employees</a>
     <a href="/artists" class="btn btn-outline-primary">Artists</a>
     <a href="/albums" class="btn btn-outline-secondary">Albums</a>
+    <a href="/playlists" class="btn btn-outline-success">Playlists</a>
     <script  th:href="@{/webjars/bootstrap/5.3.2/dist/js/bootstrap.bundle.js}"></script>
 </body>
 </html>
