--- a/src/main/resources/templates/playlist_info.html
+++ b/src/main/resources/templates/playlist_info.html
@@ -32,6 +32,27 @@
             </tr>
         </tbody>
     </table>
+    <h2>Tracks available</h2>
+    <table class="table table-sm table-striped table-hover table-bordered">
+        <thead class="table-primary">
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th class="text-center bi bi-plus">Add</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="t : ${availableTracks}">
+            <td th:text="${t.id}"></td>
+            <td th:text="${t.fullTitle}"></td>
+            <td>
+                <form th:action="@{/playlists/{id}/{tid}(id=${playlist.id}, tid=${t.id})}" th:method="post">
+                    <button type="submit" class="btn btn-primary btn-sm bi bi-plus">Add</button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
     <script  th:href="@{/webjars/bootstrap/5.3.2/dist/js/bootstrap.bundle.js}"></script>
 </body>
 </html>
